fixed index view, task-list view

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,3 @@
 <div class="container">
-  <br>
-    <a href="/session_new" name="login">Login</a>
-    <a href="/user_new" name="sign_up">Sign Up</a>
-</div>
+    <a href="/auth/twitter">Login</a>
+ </div>
