added check and x marks

--- a/app/views/_request_.erb
+++ b/app/views/_request_.erb
@@ -2,10 +2,10 @@
   <h1>@user.asker</h1>
   <p>@user.asker.task</p>
   <form class="let_them_know" action="/accept" method="post">
-    <input type="submit" name="submit_task" value="Accept">
+    <input type="submit" name="submit_task" value="&#x2713;">
  </form>
  <form class="let_them_know" action="/decline" method="post">
-    <input type="submit" name="submit_task" value="Reject">
+    <input type="submit" name="reject_task" value="&#x2717">
  </form>
  <br>
     <a href="/dashboard">Back to dashboard</a>
