--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -18,6 +18,9 @@
   <title></title>
 </head>
 <body>
+  <div class="navbar">
+    <a href="/logout">Logout</a>
+  </div>
   <%= yield %>
 </body>
 </html>
