--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -12,7 +12,13 @@
       <ul>
         <% if @user.incoming %>
           <% @user.incoming.each do |task| %>
-          <li><a href="/tasks/<%=task.id%>"><%= task.body %></a></li>
+          <table>
+           <tr>
+            <td><%= task.body %></td>
+            <td><a href ='/tasks/<%= task.id %>/accept'>YES</a></td>
+            <td><a href ='/tasks/<%= task.id %>/reject'>NO</a></td>
+           </tr>
+          </table>
           <% end %>
         <% end %>
       </ul>
@@ -22,7 +28,7 @@
       <ul>
         <% if @user.accepted %>
           <% @user.accepted.each do |task| %>
-           <li><a href="/tasks/<%=task.id%>"><%= task.body %></a></li>
+           <li><a href="/tasks/<%=task.id%>/complete"><%= task.body %></a>DONE!</li>
           <% end %>
         <% end %>
       </ul>
@@ -32,7 +38,12 @@
       <ul>
         <% if @user.requests %>
           <% @user.requests.each do |task| %>
-            <li><a href="/tasks/<%=task.id%>"><%= task.body %></a></li>
+            <table>
+             <tr>
+              <td><a href="/tasks/<%=task.id%>"><%= task.body %></a></td>
+              <td><%= task.status %></td>
+             </tr>
+            </table>
           <% end %>
         <% end %>
       </ul>
