--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,15 +14,21 @@
   -->
   <link rel="stylesheet" href="/css/application.css">
 
+  <link href='http://fonts.googleapis.com/css?family=Happy+Monkey' rel='stylesheet' type='text/css'>
+
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
   <title></title>
 </head>
 <body>
+<div class="container">
   <div class="navbar">
+    <% unless session[:id] == nil %>
     <a href="/logout">Logout</a>
+    <% end %>
   </div>
   <%= yield %>
+</div>
 </body>
 </html>
