--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,6 @@
+<div class='nav'>
 
-<a href="/auth/twitter/">Login</a>
+<img class="bluejay" src="http://www.aaialanguageprogram.org/productfiles/Pebduna_Blue_jay.png">
+<a class='login'href="/auth/twitter/">Login</a>
 
+</div>
