--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,6 +16,8 @@
 
   <link href='http://fonts.googleapis.com/css?family=Happy+Monkey' rel='stylesheet' type='text/css'>
 
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
 
@@ -25,7 +27,7 @@
 <div class="container">
   <div class="navbar">
     <% unless session[:id] == nil %>
-    <a href="/logout">Logout</a>
+    <a class='button' href="/logout">Logout</a>
     <% end %>
   </div>
   <%= yield %>
