--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,10 +1,12 @@
-<div class="container">
-  <h1>Welcome, <%= @user.name %></h1>
-  <form class="task_creator" action="/tasks/new" method="post">
-    <input type="text" name="doer" placeholder="@username"> 
-    <textarea name="body" placeholder="What do you want them to do?"></textarea>
-    <input type="submit" name="submit_task" value="2Do!">
-  </form>
+
+  <div class="col span_1_of_1">
+    <h1>Welcome, <%= @user.name %></h1>
+    <form class="task_creator" action="/tasks/new" method="post">
+      <input class='handle' type="text" name="doer" placeholder="@username"> 
+      <input class='body' type="text"name="body" placeholder="Enter your task!">
+     <input class='button' type="submit" name="submit_task" value="2Do!">
+    </form>
+  </div>
 
 <div class="section group">
   <div id="incoming" class="col span_1_of_3">
