Changed 'bluejay' to 'status'. Broke bluejay image, but come on.

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,7 @@
 
 <div class='nav'>
 
-<img class="bluejay" src="http://www.aaialanguageprogram.org/productfiles/Pebduna_Blue_jay.png">
+<img class="status" src="http://www.aaialanguageprogram.org/productfiles/Pebduna_Blue_jay.png">
 <a class='login'href="/auth/twitter/">Login</a>
 
 </div>
