--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -66,7 +66,7 @@
              <tr>
               <td><%= task.body %> </td>
               <td>@<%= task.doer.handle %> </td>
-              <td><%= task.bluejay %> </td>
+              <td><%= task.status %> </td>
              </tr>
           <% end %>
           </table>
